--- a/tan_express_app/lib/l10n/app_sv.arb
+++ b/tan_express_app/lib/l10n/app_sv.arb
@@ -1,3 +1,12 @@
 {
-  
+  "@_ERROR_MESSAGES": {},
+  "errorFieldRequired": "This field is required",
+  "errorInvalidEmail": "Invalid email",
+  "errorInvalidPhoneNumber": "Invalid mobile phone number",
+  "errorInvalidFullName": "Invalid full name",
+
+  "@_GENERAL": {},
+  "fullName": "fullständigt namn*",
+  "email": "E-postadress",
+  "phoneNumber": "Telefonnummer"
 }
